fixed ui issue where image will come out of container

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,8 +1,9 @@
 .contact-container {
   margin: 0 auto;
-  width: 100vw;
+  width: 95vw;
   padding: 100px 0px;
   text-align: center;
+  margin-bottom: 100px;
   height: 100vh;
 }
 .contact-content {
