--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,7 +1,7 @@
 .education-content{
     max-width: 1200px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     grid-column-gap: 20px;
     grid-row-gap: 100px;
     margin: 0 auto;
