--- a/src/components/Experience-item/Experience-item.css
+++ b/src/components/Experience-item/Experience-item.css
@@ -1,4 +1,10 @@
+.experience-item-container {
+    box-shadow: 0px 10px 20px 4px #00000015;
+    max-width: 1200px;
+    border-radius: 5px;
+}
 .experience-item-content {
+    position: relative;
     display: grid;
     grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
     padding: 10px;
@@ -7,27 +13,17 @@
     text-align: left;
 }
 
-.experience-item-container {
-    box-shadow: 0px 10px 20px 4px #00000015;
-    max-width: 1200px;
-    border-radius: 5px;
-}
-
 .experience-item-image{
     margin: 0 auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 
 }
-
-.experience-item-description{
-    grid-column: auto / span 2;
-    padding: 40px;
-
-}
-
 .experience-item-image2{
     width: 100%;
     height: 100%;
 }
+.experience-item-description{
+    grid-column: auto / span 2;
+    padding: 20px;
+
+}
+
